--- a/prj1.html
+++ b/prj1.html
@@ -12,7 +12,7 @@
     <!-- Navigation Bar -->
     <nav class="navbar navbar-light bg-white shadow-sm">
         <div class="container">
-            <a href="resume.html" class="btn btn-outline-primary">← Back to Resume</a>
+            <a href="index.html" class="btn btn-outline-primary">← Back to Resume</a>
         </div>
     </nav>
 
